[package]
name = "orbits"
version = "0.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-window = "0.47.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
fps_counter = "2.0.0"
rand = "0.8.3"
clap = {version = "2.33.3", features = ["yaml"]}
